<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.app.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    
    
    
    <item
        android:id="@+id/action_follow"
        android:orderInCategory="100"
        android:title="@string/action_follow"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_go"
        android:orderInCategory="100"
        android:title="@string/action_go"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_actividad1"
        android:orderInCategory="100"
        android:title="@string/action_actividad1"
        app:showAsAction="never"/>
    
    
    
    <!-- vamos a crear un boton de cierre -->
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never"/>

</menu>
